networking/main.tf

// ✎﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏𝐂𝐑𝐄𝐀𝐓𝐄 𝐕𝐏𝐂﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏
resource "aws_vpc" "jeks" {
      cidr_block = var.vpc_cidr
      tags = {
      Name = "${var.env}-░V░P░C░"
      }
}

// ✎﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏𝐂𝐑𝐄𝐀𝐓𝐄 𝐈𝐍𝐓𝐄𝐑𝐍𝐄𝐓 𝐆𝐀𝐓𝐄𝐖𝐀𝐘 ﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏
resource "aws_internet_gateway" "gw" {
      vpc_id = aws_vpc.jeks.id

      tags = {
      Name = "${var.env}-𝒊𝒏𝒕𝒆𝒓𝒏𝒆𝒕-𝒈𝒂𝒕𝒆𝒘𝒂𝒚"
      }
}

//✎﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏𝐑𝐎𝐔𝐓𝐄 𝐓𝐀𝐁𝐋𝐄﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏
resource "aws_route_table" "rt" {
        count = length(var.public_subnet_cidr)
        vpc_id = aws_vpc.jeks.id

  route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
        }
        tags = {
        Name = "-${var.env}🆁🅾🆄🆃🅴${count.index + 1}☆☆╮"
        }
}

//✎﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏𝐂𝐑𝐄𝐀𝐓𝐄 𝐑𝐎𝐔𝐓𝐄 𝐓𝐀𝐁𝐋𝐄﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏
resource "aws_route_table" "rt1" {
        vpc_id = aws_vpc.jeks.id

  route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gw.id
        }
        tags = {
        Name = "${var.env}"
        }
}

//✎﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏𝐑𝐎𝐔𝐓𝐄 𝐓𝐀𝐁𝐋𝐄 𝐀𝐒𝐒𝐎𝐂𝐈𝐀𝐓𝐈𝐎𝐍﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏
resource "aws_route_table_association" "a" {
        count = length(var.public_subnet_cidr)
        subnet_id      = aws_subnet.pub1.*.id[count.index]
        route_table_id = aws_route_table.rt.*.id[count.index]
}

//✎﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏𝐂𝐑𝐄𝐀𝐓𝐄 𝐒𝐔𝐁𝐍𝐄𝐓﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏﹏
resource "aws_subnet" "pub1" {
        count = length(var.public_subnet_cidr)
        vpc_id     = aws_vpc.jeks.id
        cidr_block = var.public_subnet_cidr[count.index]
        availability_zone = data.aws_availability_zones.available.names[count.index]
        tags = {
        Name = "${var.env}-𝐒𝐔𝐁𝐍𝐄𝐓${count.index + 1}﹏﹏"
        }
}
data "aws_availability_zones" "available" {
  state = "available"
}
